tests/NormalTests/paczka1/small_fuzzy/51642043.err
Error in line 1: FP5L1RZ A70 76,0
Error in line 4: Ep8xW A341 78,2
Error in line 6: MmRb8r8SwY S666 50,5
